force-app/main/default/objects/BF_Enrolment_Setting__mdt/BF_Enrolment_Setting__mdt.object-meta.xml
<CustomObject>
    <label>BF Enrolment Setting</label>
    <pluralLabel>BF Enrolment Setting</pluralLabel>
</CustomObject>