force-app/main/default/objects/BF_Enrolment_Setting__mdt/fields/Enrolment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Type__c</fullName>
    <description>Enrolment type will determine the Opportunity record type is handled.</description>
    <label>Enrolment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolment</fullName>
                <default>true</default>
                <label>Enrolment</label>
            </value>
            <value>
                <fullName>Reenrolment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>