force-app/main/default/objects/BF_Enrolment_Setting__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Opportunity Record Type Label</description>
    <label>Record Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>