force-app/main/default/objects/BF_Enrolment_Setting__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Opportunity Record Type Name. (API Name)</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>